# fast-bernoulli

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
